# LPCXpresso55S06

./: .gitignore  SW-Content-Register.txt
boards/lpcxpresso55s06/demo_apps/: CMakeLists.txt  lpcxpresso55s06.code-workspace
boards/lpcxpresso55s06/demo_apps/hello_world/armgcc/debug/: hello_world.elf
boards/lpcxpresso55s06/demo_apps/hello_world/armgcc/release/: hello_world.elf
boards/lpcxpresso55s06/demo_apps/hello_world_swo/armgcc/Debug/: hello_world_swo.elf
boards/lpcxpresso55s06/demo_apps/led_blinky/armgcc/debug/: led_blinky.elf  led_blinky.jdebug
boards/lpcxpresso55s06/demo_apps/led_blinky/armgcc/release/: led_blinky.elf
boards/lpcxpresso55s06/demo_apps/shell/armgcc/debug/: shell.elf  shell.jdebug
boards/lpcxpresso55s06/demo_apps/shell/iar/settings/: shell.debug.cspy.bat  shell.debug.cspy.ps1  shell.debug.general.xcl  shell.wsdt
