CMAKE_MINIMUM_REQUIRED (VERSION 3.10.0)

project(LPCXpresso55S06)

#add_subdirectory(hello_world/armgcc)
#add_subdirectory(hello_world_swo/armgcc)
add_subdirectory(led_blinky/armgcc)
#add_subdirectory(power_manager_lpc/armgcc)
#add_subdirectory(puf_hashcrypt_crypto/armgcc)
#add_subdirectory(shell/armgcc)
#add_subdirectory(utick_wakeup/armgcc)

